objects/Region__c.object
<CustomObject>
    <description>Region</description>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <description>Region Code</description>
        <inlineHelpText>Region Code</inlineHelpText>
        <label>Region Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Country_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>